--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Generate your Kaspa Transaction Report"
+      content="Generate your Karlsen Transaction Report"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Kaspa-Icon-Dark Green on Black.svg" />
     <!--
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Kaspa Transaction Report</title>
+    <title>Karlsen Transaction Report</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
