--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Generate your Karlsen Transaction Report"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Kaspa-Icon-Dark Green on Black.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/K-icon-glow.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
